syntax = "proto3";

package a;

// Moving enumValues between enums
enum Move {
  TEN_1 = 0;
}

enum Move2 {
  TEN_2 = 0;
}

enum MoveType {
  TEN_3 = 0;
}
