syntax = "proto3";

package a;

enum GroupEnums2 {
  A = 0;
}

message Two {
  int32 one = 1;
  int32 two = 2;
}

message Three {
  message Four {
    message Five {
      int32 one = 1;
      int32 two = 2;
      message FOUR {}
    }
    message Six {
      int32 one = 1;
      int32 two = 2;
      int32 three = 3;
      int32 four = 5;
      string five = 6;
      int32 six = 7;
      string seven = 8 [json_name= "bar"];
      string eigth = 9 [json_name= "baz"];
      int32 nine2 = 10;
    }
  }
  message Seven {
    int32 one = 1;
    int32 two = 2;
    int32 three = 3;
  }
  message Eight {
    int32 one = 1;
    int32 changed_name = 2;
    int32 three = 3;
  }
  int32 one = 1;
  int32 two = 2;
  Seven three = 3;
  GroupEnums2 four = 4;
}
