syntax = "proto3";

package a;

// whole message delete
message One {
  int32 one = 1;
}

enum GroupEnums {
  A = 0;
}

message Two {
  int32 one = 1;
  int32 two = 2;
  int32 three = 3; // handle delete
}

message Three {
  message Four {
    message Five {
      int32 one = 1;
      int32 two = 2;
    }
    message Six {
      int32 one = 1;
      int32 two = 2;
      int32 three = 3;
      int32 four = 4; // change in number
      int32 five = 6; // change in type
      repeated int32 six = 7; // change in label
      string seven = 8 [json_name= "bar"];
      string eigth = 9 [json_name= "foo"];  // change in json_name
    }
  }
  message Seven {
    int32 one = 1;
    int32 two = 2;
    int32 three = 3;
  }
  message Eight {
    int32 one = 1;
    int32 two = 2;
    int32 three = 3;
  }
  int32 one = 1;
  int32 two = 2;
  Two three = 3; // change in message type field
  GroupEnums four = 4; // change in enumtype field
}

message Nine {
  int32 one = 1;
  int32 two = 2;
  int32 three = 3;
}
